--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "coldfusion",
-  "description": "personal portfolio using colfusion",
-  "repository": "https://github.com/csperando/lucee5-heroku",
+  "name": "cf template",
+  "description": "template for a lucee/cfwheels app on heroku",
+  "repository": "https://github.com/csperando/cfheroku",
   "logo": "https://avatars2.githubusercontent.com/u/10973141?v=3&s=200",
-  "keywords": ["lucee", "cfml"]
+  "keywords": ["lucee", "cfml", "heroku"]
 }
